--- a/student-club-frontend/package.json
+++ b/student-club-frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
+    "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.2",
     "vue-router": "^4.2.2"
